[gd_scene load_steps=11 format=2]

[ext_resource path="res://Witch/CutSceneWitch.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pot/Pot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tileset/BugBrewer.tres" type="TileSet" id=3]
[ext_resource path="res://Cutscenes/Brewing/Brewing.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -15, -15.6977, -10.9135, -0.497246, 10.9135, 0.497246, -4, -40.814, -1.11362, -3.1803, 1.11362, 3.1803, 7, -16.8837 )
}

[sub_resource type="Animation" id=5]
resource_name = "MixPot"
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath("CutSceneWitch")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "magic" ],
"method": "play_animation"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "mixing", false ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "mixing" ],
"method": "play_pot_animation"
}, {
"args": [ "idle" ],
"method": "play_pot_animation"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "WalkingAwayFromPot", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CutSceneWitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -159, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ThrowTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "ThrowingInPot"
tracks/0/type = "value"
tracks/0/path = NodePath("CutSceneWitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -22, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "decide_if_throw_or_mix_animation_has_to_be_played"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkingAwayFromPot"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CutSceneWitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -22, 0 ), Vector2( 160, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CutSceneWitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "running" ],
"method": "play_animation"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "next_level"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkingToPot"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CutSceneWitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -159, 0 ), Vector2( -22, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CutSceneWitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "running" ],
"method": "play_animation"
}, {
"args": [ "throw" ],
"method": "play_animation"
} ]
}

[node name="Brewing" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327690, 2, 0, -327689, 2, 0, -327688, 2, 0, -327687, 2, 0, -327686, 2, 0, -327685, 2, 0, -327684, 2, 0, -327683, 2, 0, -327682, 2, 0, -327681, 2, 0, -393216, 2, 0, -393215, 2, 0, -393214, 2, 0, -393213, 2, 0, -393212, 2, 0, -393211, 2, 0, -393210, 2, 0, -393209, 2, 0, -393208, 2, 0, -393207, 2, 0, -262154, 2, 0, -262153, 2, 0, -262152, 2, 0, -262151, 2, 0, -262150, 2, 0, -262149, 2, 0, -262148, 2, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 2, 0, -196618, 2, 0, -196617, 2, 0, -196616, 2, 0, -196615, 2, 0, -196614, 2, 0, -196613, 2, 0, -196612, 2, 0, -196611, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 2, 0, -262139, 2, 0, -262138, 2, 0, -262137, 2, 0, -262136, 2, 0, -262135, 2, 0, -131082, 2, 0, -131081, 2, 0, -131080, 2, 0, -131079, 2, 0, -131078, 2, 0, -131077, 2, 0, -131076, 2, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -65546, 2, 0, -65545, 2, 0, -65544, 2, 0, -65543, 2, 0, -65542, 2, 0, -65541, 2, 0, -65540, 2, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -10, 2, 0, -9, 2, 0, -8, 2, 0, -7, 2, 0, -6, 2, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, 65525, 1, 0, 65526, 1, 1, 65527, 1, 1, 65528, 1, 1, 65529, 1, 1, 65530, 1, 1, 65531, 1, 1, 65532, 1, 1, 65533, 1, 1, 65534, 1, 1, 65535, 1, 1, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 2, 131061, 1, 0, 131062, 1, 65537, 131063, 1, 65537, 131064, 1, 65537, 131065, 1, 65537, 131066, 1, 65537, 131067, 1, 65537, 131068, 1, 65537, 131069, 1, 65537, 131070, 1, 65537, 131071, 1, 65537, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 65537, 65543, 1, 65537, 65544, 1, 65537, 65545, 1, 65537, 65546, 1, 0, 196597, 1, 0, 196598, 1, 65537, 196599, 1, 65537, 196600, 1, 65537, 196601, 1, 65537, 196602, 1, 65537, 196603, 1, 65537, 196604, 1, 65537, 196605, 1, 65537, 196606, 1, 65537, 196607, 1, 65537, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 65537, 131079, 1, 65537, 131080, 1, 65537, 131081, 1, 65537, 131082, 1, 0, 262133, 1, 0, 262134, 1, 65537, 262135, 1, 65537, 262136, 1, 65537, 262137, 1, 65537, 262138, 1, 65537, 262139, 1, 65537, 262140, 1, 65537, 262141, 1, 65537, 262142, 1, 65537, 262143, 1, 65537, 196608, 1, 65537, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65537, 196615, 1, 65537, 196616, 1, 65537, 196617, 1, 65537, 196618, 1, 0, 327669, 1, 0, 327670, 1, 65537, 327671, 1, 65537, 327672, 1, 65537, 327673, 1, 65537, 327674, 1, 65537, 327675, 1, 65537, 327676, 1, 65537, 327677, 1, 65537, 327678, 1, 65537, 327679, 1, 65537, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 0, 393205, 1, 0, 393206, 1, 65537, 393207, 1, 65537, 393208, 1, 65537, 393209, 1, 65537, 393210, 1, 65537, 393211, 1, 65537, 393212, 1, 65537, 393213, 1, 65537, 393214, 1, 65537, 393215, 1, 65537, 327680, 1, 65537, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 0, 458741, 1, 0, 458742, 1, 0, 458743, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0 )

[node name="IngredientPath" type="Path2D" parent="."]
position = Vector2( -7, 18 )
scale = Vector2( 1, 1.59259 )
curve = SubResource( 1 )

[node name="Pot" parent="." instance=ExtResource( 2 )]
animation = "idle"

[node name="CutSceneWitch" parent="." instance=ExtResource( 1 )]
position = Vector2( -159, 0 )

[node name="ThrowTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MixPot = SubResource( 5 )
anims/RESET = SubResource( 3 )
anims/ThrowingInPot = SubResource( 4 )
anims/WalkingAwayFromPot = SubResource( 6 )
anims/WalkingToPot = SubResource( 2 )
next/WalkingToPot = "ThrowingInPot"

[node name="Camera" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
